--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% load blog_extras %}
 {% block content %}
 <h2>{{ post.title }}</h2>
@@ -14,6 +15,7 @@
 {% endrow %}
 {% row %}
     {% col %}
+        {% include "blog/post-comments.html" %}
         {% recent_posts post %}
     {% endcol %}
 {% endrow %}
